syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Protos.Transaction";

package transaction;

service TransactionService {
	rpc GetUserTransactions (GetUserTransactionsRequest) returns (TransactionsResponse);
	rpc GetAccountTransactions (GetAccountTransactionsRequest) returns (TransactionsResponse);
	rpc GetTransactionById (GetTransactionByIdRequest) returns (TransactionResponse);
	rpc CreatePaymentTransaction (AddTransactionRequest) returns (TransactionResponse);
	rpc UpdateTransaction (UpdateTransactionRequest) returns (TransactionResponse);
	rpc DeleteTransaction (DeleteTransactionRequest) returns (TransactionResponse);
}

message GetUserTransactionsRequest {
	int32 userId = 1;
}

message GetAccountTransactionsRequest {
	int32 accountId = 1;
}

message GetTransactionByIdRequest {
	int32 id = 1;
}

message AddTransactionRequest {
	int32 userId = 1;
	int32 accountId = 2;
	float amount = 3;
}

message UpdateTransactionRequest {
	int32 id = 1;
	int32 userId = 2;
	int32 accountId = 3;
	string type = 4;
	float amount = 5;
	// google.protobuf.Timestamp timestamp = 6;
	string status = 7;
}

message DeleteTransactionRequest {
	int32 id = 1;
}

message TransactionResponse {
	optional Transaction transaction = 1;
}

message TransactionsResponse {
	repeated Transaction transactions = 1;
}

message Transaction {
	int32 id = 1;
	int32 userId = 2;
	int32 accountId = 3;
	string type = 4;
	float amount = 5;
	// google.protobuf.Timestamp timestamp = 6;
	string status = 7;
}
